--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
          "manager",
          "innexi"
       ],   
-   "repository": "https://github.com/DarkCybers/innexia.git",
+   "repository": "https://github.com/legendarmy12/YTDLL.git",
    "addons": [
       {
          "options": {
